# Jipp

./: .gitignore  CMakeLists.txt  README.md  main.c  w10  w10.c  w11  w11.c  w12  w12.c  w8  w8.c  w9  w9.c
LAB2/: w10.c  w9.c
LAB3/: lab3_z10.c  lab3_z11.c  lab3_z12.c  lab3_z13.c  lab3_z9.c
w10.dSYM/Contents/: Info.plist
w10.dSYM/Contents/Resources/DWARF/: w10
w10.dSYM/Contents/Resources/Relocations/aarch64/: w10.yml
w11.dSYM/Contents/: Info.plist
w11.dSYM/Contents/Resources/DWARF/: w11
w11.dSYM/Contents/Resources/Relocations/aarch64/: w11.yml
w9.dSYM/Contents/: Info.plist
w9.dSYM/Contents/Resources/DWARF/: w9
w9.dSYM/Contents/Resources/Relocations/aarch64/: w9.yml
