cmake_minimum_required(VERSION 4.0)
project(untitled C)

set(CMAKE_C_STANDARD 99)

add_executable(jipp main.c
        LAB2/w8.c
        LAB2/w9.c
        LAB2/w10.c
        LAB2/w11.c
        LAB2/w12.c
        LAB3/lab3_z9.c
        LAB3/lab3_z10.c
        LAB3/lab3_z11.c
        LAB3/lab3_z13.c
        LAB3/lab3_z12.c)
